assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');

/* Global Styles ------------------------------------------------- */

body {
    font-family: 'Roboto', sans-serif;
    color: #e2e2e2;
}

.background {
    padding-top: 20px;
    background: repeating-linear-gradient(135deg, rgb(40, 40, 40) 6px, rgb(30, 30, 30) 12px);
    overflow-y: hidden;
}


/* Navigation ---------------------------------------------------- */

.list-group-item {
    font-size: 0.9rem;
    padding: 6px 16px;
    color: #e2e2e2;
}

.offcanvas-body {
    overflow-y: visible;
}

.navbar-dark .navbar-toggler {
    color: none;
    padding: 0.25rem;
    border: none;
}

.navbar-toggler:focus {
    box-shadow: none;
}

.navbar,
footer {
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
}

.nav-link {
    padding: 8px 0 8px 5px;
}

.navbar-nav .nav-link {
    padding-left: 10px;
}

.nav-link:hover {
    background-color: rgba(80, 80, 80, 0.8);
    border-radius: 10px;
}

.btn {
    position: relative;
    bottom: 2px;
    margin-left: 15px;
}

.btn-group-sm>.btn,
.btn-sm {
    margin-left: 15px;
    padding: 0.1rem 0.4rem;
    font-size: .75rem;
    border-radius: 0.2rem;
}

.dropdown-menu {
    background: repeating-linear-gradient(135deg, rgb(40, 40, 40) 6px, rgb(30, 30, 30) 12px);
    border: 1px solid rgb(70, 70, 70);
}

.dropdown-item {
    color: #e2e2e2;
}

.settings {
    color: #e2e2e2;
    margin-left: 10px;
    padding: 4px;
}

.a {
    color: #e2e2e2;
    text-decoration: none;
}


/* Headings ------------------------------------------------------ */

h2 {
    font-size: 1.4rem;
    margin: 4px 4px 4px 0;
}

h3 {
    font-size: 1.3rem;
}

h4 {
    font-size: 1.2rem;
    color: rgb(40, 132, 218);
}

hr {
    margin: 0;
    margin-bottom: 1rem;
}

.highlight {
    color: red;
}


/* Progress Bars ------------------------------------------------- */

.progress {
    position: relative;
    height: 25px;
    margin: 10px 0;
}

.progress-type {
    position: absolute;
    left: 5px;
    font-weight: 400;
    top: 3px;
    color: #fafafa;
}

.progress-bar {
    background-color: rgb(102, 102, 102);
}


/* Cards --------------------------------------------------------- */

.card {
    max-width: 100%;
    margin-top: 5px;
    margin-bottom: 20px;
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    border: 1px solid #444;
}

.list-group-item {
    font-size: 0.9rem;
    padding: 6px 16px;
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    color: #e2e2e2;
}

.btn {
    position: relative;
    bottom: 2px;
    margin-left: 10px;
}


/* Cards --------------------------------------------------------- */

.accordion {
    margin-bottom: 20px;
}

.accordion-item {
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
}

.accordion-button {
    background: repeating-linear-gradient(135deg, rgb(60, 60, 60) 6px, rgb(50, 50, 50) 12px);
    color: #e2e2e2;
}

.accordion-button:not(.collapsed) {
    color: #e2e2e2;
    background-color: #e7f1ff;
    box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
}


/* Scrollbar ----------------------------------------------------- */

::-webkit-scrollbar {
    width: 6px;
}

::-webkit-scrollbar-track {
    -webkit-box: inset 0 0 6px rgb(56, 121, 146);
    border-radius: 4px;
}

::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgb(102, 102, 102);
    -webkit-box: inset 0 0 6px rgba(81, 160, 153, 1);
}

